add a second title

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Un super titre !!</h1>
+    <h2>Un titre un peu moins bien... :(</h2>
     <span>Une belle span!</span>
 </body>
 </html>
